--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,6 @@
 .bg-img{
     background-image: url(img/4858794.jpg);
-    background-repeat:no-repeat;
+    background-repeat:repeat-y;
     background-position:center center;
     background-size: cover;
 }
