--- a/src/style.css
+++ b/src/style.css
@@ -4,3 +4,14 @@
     background-position:center center;
     background-size: cover;
 }
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
